--- a/angular-graphql-client/src/app/cart/cart.component.html
+++ b/angular-graphql-client/src/app/cart/cart.component.html
@@ -23,7 +23,7 @@
                   <small id="idHelp" class="form-text text-muted"> This field fill automatically after checkout creation</small>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
+                  <label for="exampleInputEmail1">Email address*</label>
                   <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
@@ -54,7 +54,7 @@
               <div class="cart-block">
                 <!--legend> Mailing Address </legend-->
                 <div class="form-group">
-                  <label for="address1">Address1</label>
+                  <label for="address1">Address1*</label>
                   <input type="text" formControlName="address1" class="form-control" id="address1" placeholder="Address1">
                 </div>
 
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="city">City</label>
+                  <label for="city">City*</label>
                   <input type="text" formControlName="city" class="form-control" id="city" placeholder="City">
                 </div>
 
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="country">Country</label>
+                  <label for="country">Country*</label>
                   <input type="text" formControlName="country" class="form-control" id="country" placeholder="Country">
                 </div>
 
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="lastName">Last Name</label>
+                  <label for="lastName">Last Name*</label>
                   <input type="text" formControlName="lastName" class="form-control" id="lastName" placeholder="Last Name">
                 </div>
 
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label for="zip">Zip</label>
+                  <label for="zip">Zip*</label>
                   <input type="text" formControlName="zip" class="form-control" id="zip" placeholder="Zip">
                 </div>
               </div>
