html structure and css are the same as in other samples

--- a/angular-graphql-client/src/app/app.component.html
+++ b/angular-graphql-client/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!!
-  </h1>
-  <app-home></app-home>
-</div>
+<app-home></app-home>
+<app-cart></app-cart>
 
