--- a/angular-graphql-client/src/app/home/home.component.html
+++ b/angular-graphql-client/src/app/home/home.component.html
@@ -1,11 +1,8 @@
-<div class="container">
-  <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" routerLink="/products" routerLinkActive="active">Products</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/cart">My cart</a>
-  </li>
-</ul>
+<div class="App">
+  <header class="App__header">
+    <button class="App__view-cart" (click)="openCloseCart()">Cart</button>
+    <div class="App__title">
+      <h1>{{shopTitle}}: Angular 5 example</h1>
+    </div>
+  </header>
 </div>
-  <router-outlet></router-outlet>
