--- a/angular-graphql-client/src/app/product/product.component.html
+++ b/angular-graphql-client/src/app/product/product.component.html
@@ -1,30 +1,26 @@
-<div class="container">
-  <div class="row">
-    <div class="col-6 productblock">
-      <span> Product name: </span> {{product.title}}
-      <div>
-        <small><span>product ID:</span> {{product.id}}</small>
-      </div>
-    </div>
-    <div class="col-6">
-      <img src={{product.images[0].src}}>
-    </div>
+
+<form [formGroup]="form">
+  <img *ngIf="form.get('variant').value.image; else productImageTemplate" [src]="form.get('variant').value.image.src">
+  <h5 class="Product__title">{{(product)?.title}}</h5>
+  <span class="Product__price">${{form.get("variant").value.price}}</span>
+  <div>
+    <label>Title</label>
+    <select formControlName="variant">
+        <option *ngFor="let variant of (product)?.variants" [ngValue]="variant">
+          {{ variant.title }}
+        </option>
+      </select>
   </div>
-  <div class="row">
-    <h1> Variants of {{product.title}}</h1>
-    <div class="list-group">
-      <div *ngFor="let variant of product.variants" class="list-group-item list-group-item-action align-items-start">
-        <div class="variant-block">
-          <h5 class="mb-1">{{variant.title}}</h5>
-          <small hidden='true'> <span>variant ID:</span>{{variant.id}}</small>
-          <p class="mb-1"><span> Price: </span>{{variant.price}}</p>
-          <button (click)="addToCart(variant)">Add to cart</button>
-        </div>
-        <div *ngIf="variant.image; else noImageBlock">
-          <img src={{variant.image.src}}>
-        </div>
-        <ng-template #noImageBlock><img src="./assets/images/empty-img.png"></ng-template>
-      </div>
-    </div>
-  </div>
-</div>
+  <label>Quantity</label>
+  <input type="number" min="1" class="Product__quantity" formControlName="quantity">
+  <button class="Product__buy button" (click)="onSubmit()">
+    Add to cart
+  </button>
+</form>
+
+
+<ng-template #productImageTemplate>
+    <img *ngIf="(product)?.images[0]" [src]="(product)?.images[0].src">
+</ng-template>
+
+<!--p>Form value: {{ form.value | json }}</p-->
